Add song to assets folder

--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
 
         <!-- Audio player container -->
         <div class = "vertical-container" id="audio-container"> 
+            <!-- Song name and artist -->
+            <p>
+                <span> Angeleyes </span>
+                <span> by </span>
+                <span> ABBA </span>
+            </p>
+            <!--  -->
+            <div class = "vertical-container">
+                
+            </div>
+            <div class = "vertical-container">
+
+            </div>
 
         </div>
     </div>
