add image and styling to buttons

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +10,16 @@
     <script src="js/script.js" defer></script>
 
 </head>
+
 <body>
     <!-- Main container div -->
-    <div class = "vertical-container" id="main-container">
+    <div class="vertical-container" id="main-container">
 
         <!-- Audio player title -->
-        <h1 id= "title">Title</h1>
+        <h1 id="title">Title</h1>
 
         <!-- Audio player container -->
-        <div class = "vertical-container" id="audio-container"> 
+        <div class="vertical-container" id="audio-container">
             <!-- Song name and artist -->
             <p>
                 <span> Angeleyes </span>
@@ -25,10 +27,19 @@
                 <span> ABBA </span>
             </p>
             <!--  -->
-            <div class = "vertical-container">
-                
+            <div class="container">
+                <div class="container">
+                    
+                </div>
+                <div class="container">
+                    <button>previous</button>
+                    <button>play</button>
+                    <button>next</button>
+                </div>
+                <img id= "cover-image" src="assets/images/ABBA.jpeg" alt="">
             </div>
-            <div class = "vertical-container">
+            <!--  -->
+            <div class="container">
 
             </div>
 
@@ -36,4 +47,5 @@
     </div>
 
 </body>
+
 </html>
