commenting and volume controls

--- a/index.html
+++ b/index.html
@@ -26,17 +26,20 @@
                 <span> by </span>
                 <span> ABBA </span>
             </p>
-            <!--  -->
+            <!-- Volume + play, previous, next buttons + image cover conntainer-->
             <div class="container">
+                <!-- Volume -->
                 <div class="container">
-                    
+                    <input type="range" min="0" max="100">
                 </div>
+                <!-- Play, previous, next buttons -->
                 <div class="container">
                     <button>previous</button>
                     <button>play</button>
                     <button>next</button>
                 </div>
-                <img id= "cover-image" src="assets/images/ABBA.jpeg" alt="">
+                <!-- Image cover -->
+                <img id="cover-image" src="assets/images/ABBA.jpeg" alt="">
             </div>
             <!--  -->
             <div class="container">
