--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <button>next</button>
                 </div>
                 <!-- Image cover -->
-                <img id="cover-image" src="assets/images/ABBA.jpeg" alt="">
+                <img id="cover-image" src="assets/images/Angeleyes.jpeg" alt="">
             </div>
             <!--  -->
             <div class="container">
