--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span> ABBA </span>
             </p>
             <!-- Volume + play, previous, next buttons + image cover conntainer-->
-            <div class="container">
+            <div class="container justify-space-around">
                 <!-- Volume -->
                 <div class="container">
                     <input type="range" min="0" max="100">
