--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="style/style.css" />
-    <script src="script.js" defer></script>
+    <script src="js/script.js" defer></script>
 
 </head>
 
