create audio player and add pause play function

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <!-- Play, previous, next buttons -->
                 <div class="container">
                     <button>previous</button>
-                    <button>play</button>
+                    <button id="play-button">play</button>
                     <button>next</button>
                 </div>
                 <!-- Image cover -->
