--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- Duration of song -->
             <div class="container">
                 <p>00:00 / 00:00</p>
-                <input type="range">
+                <input id="progress-slider" type="range" value="0">
             </div>
 
         </div>
