volume slider works

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="vertical-container justify-space-around">
                 <!-- Volume -->
                 <div class="vertical-container">
-                    <input type="range" min="0" max="100">
+                    <input id="volume-slider" type="range" min="0" max="100">
                 </div>
                 <!-- Play, previous, next buttons -->
                 <div class="container">
