--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 
             <!-- Duration of song -->
             <div class="container">
-                <p>00:00 / 00:00</p>
+                <p> 
+                    <span id="progress-text">00:00</span> / 
+                    <span id="duration-text">00:00</span>
+                </p>
                 <input id="progress-slider" type="range" value="0">
             </div>
 
