adding other songs

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 </div>
                 <!-- Play, previous, next buttons -->
                 <div class="container">
-                    <button>previous</button>
+                    <button id="previous-button">previous</button>
                     <button id="play-button">play</button>
-                    <button>next</button>
+                    <button id="next-button">next</button>
                 </div>
                 <!-- Image cover -->
                 <img id="cover-image" src="assets/images/Angeleyes.jpeg" alt="">
