add favicon and update some images

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style/style.css" />
     <script src="js/script.js" defer></script>
 
+    <link rel="shortcut icon" href="assets/images/favicon.png" />
+
 </head>
 
 <body>
@@ -16,13 +18,13 @@
     <div class="vertical-container" id="main-container">
 
         <!-- Audio player title -->
-        <h1 id="title">Title</h1>
+        <h1 id="title">𐙚⋆ . ˚ ABBA 𓈒ㅤׂ 𝜗𝜚</h1>
 
         <!-- Audio player container -->
         <div class="vertical-container" id="audio-container">
             <!-- Song name and artist -->
             <p>
-                <span> Angeleyes </span>
+                <span id="song-name"> Angeleyes </span>
                 <span> by </span>
                 <span> ABBA </span>
             </p>
@@ -40,13 +42,13 @@
                     <button id="next-button">next</button>
                 </div>
                 <!-- Image cover -->
-                <img id="cover-image" src="assets/images/Angeleyes.jpeg" alt="">
+                <img id="cover-image" src="assets/images/Angeleyes.jpg" alt="">
             </div>
 
             <!-- Duration of song -->
             <div class="container">
-                <p> 
-                    <span id="progress-text">00:00</span> / 
+                <p>
+                    <span id="progress-text">00:00</span> /
                     <span id="duration-text">00:00</span>
                 </p>
                 <input id="progress-slider" type="range" value="0">
