--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body id="drop-zone">
     <!-- Main container div -->
     <div class="vertical-container" id="main-container">
 
