--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body id="drop-zone">
+<body draggable="true" id="drop-zone">
     <!-- Main container div -->
     <div class="vertical-container" id="main-container">
 
