make audio player draggable

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body draggable="true" id="drop-zone">
+<body id="drop-zone">
     <!-- Main container div -->
     <div class="vertical-container" id="main-container">
 
@@ -21,7 +21,7 @@
         <h1 id="title">𐙚⋆ . ˚ ABBA 𓈒ㅤׂ 𝜗𝜚</h1>
 
         <!-- Audio player container -->
-        <div class="vertical-container" id="audio-container">
+        <div draggable="true" class="vertical-container" id="audio-container">
             <!-- Song name and artist -->
             <p>
                 <span id="song-name"> Angeleyes </span>
