--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="style/style.css" />
     <script src="js/script.js" defer></script>
+    <script src="js/dragdrop.js" defer></script>
 
     <link rel="shortcut icon" href="assets/images/favicon.png" />
 
