drag and drop features

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body id="drop-zone">
+<body draggable="false" id="drop-zone">
     <!-- Main container div -->
     <div class="vertical-container" id="main-container">
 
