--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 </head>
 
-<body draggable="false" id="drop-zone">
+<body>
     <!-- Main container div -->
-    <div class="vertical-container" id="main-container">
+    <div draggable="false" class="vertical-container" id="main-container">
 
         <!-- Audio player title -->
         <h1 id="title">𐙚⋆ . ˚ ABBA 𓈒ㅤׂ 𝜗𝜚</h1>
@@ -56,6 +56,7 @@
             </div>
 
         </div>
+
     </div>
 
 </body>
