auto play and loop fucntions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div draggable="false" class="vertical-container" id="main-container">
 
         <!-- Audio player title -->
-        <h1 id="title">𐙚⋆ . ˚ ABBA 𓈒ㅤׂ 𝜗𝜚</h1>
+        <h1 id="title">𐙚⋆ . ˚ Audio Player 𓈒ㅤׂ 𝜗𝜚</h1>
 
         <!-- Audio player container -->
         <div draggable="true" class="vertical-container" id="audio-container">
@@ -43,7 +43,11 @@
                     <button id="next-button">next</button>
                 </div>
                 <!-- Image cover -->
-                <img id="cover-image" src="assets/images/Angeleyes.jpg" alt="">
+                 <div class="container">
+                    <button id="auto-play" class="play-options">auto play</button>
+                    <img id="cover-image" src="assets/images/Angeleyes.jpg">
+                    <button id="loop" class="play-options">loop</button>
+                 </div>
             </div>
 
             <!-- Duration of song -->
