Added two new songs and updated counters accordingly
counters that made sure the index always selected a song.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/script.js" defer></script>
     <script src="js/dragdrop.js" defer></script>
 
-    <link rel="shortcut icon" href="assets/images/favicon.png" />
+    <link rel="shortcut icon" href="assets/images/Favicon/favicon.png" />
 
 </head>
 
