--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <!-- Links other files in -->
     <link rel="stylesheet" href="style/style.css" />
     <script src="js/script.js" defer></script>
     <script src="js/dragdrop.js" defer></script>
-
+    <!-- Adds favicon to page -->
     <link rel="shortcut icon" href="assets/images/Favicon/favicon.png" />
 
 </head>
